--- a/ci.qrc
+++ b/ci.qrc
@@ -31,5 +31,6 @@
         <file>resource/sci/themes/NauticalButNice.xml</file>
         <file>resource/sci/themes/Neon.xml</file>
         <file>resource/sci/themes/VS2015-Dark.xml</file>
+        <file>codeinspector.png</file>
     </qresource>
 </RCC>
