--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -100,6 +100,9 @@
     </property>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1,1,0,0">
+      <property name="spacing">
+       <number>2</number>
+      </property>
       <item>
        <widget class="QComboBox" name="cbProgrammingLanguageList">
         <item>
@@ -160,13 +163,6 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnLoadExample">
-        <property name="styleSheet">
-         <string notr="true">background-color:#FFFFFF;
-border: 0;
-color:0;
-padding:5px;
-border-radius: 4;</string>
-        </property>
         <property name="text">
          <string/>
         </property>
@@ -180,17 +176,13 @@ border-radius: 4;</string>
           <height>32</height>
          </size>
         </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="btnConfiguration">
-        <property name="styleSheet">
-         <string notr="true">background-color:#FFFFFF;
-border: 0;
-color:0;
-padding:5px;
-border-radius: 4;</string>
-        </property>
         <property name="text">
          <string/>
         </property>
@@ -203,6 +195,9 @@ border-radius: 4;</string>
           <width>32</width>
           <height>32</height>
          </size>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
