--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -104,43 +104,7 @@
        <number>2</number>
       </property>
       <item>
-       <widget class="QComboBox" name="cbLanguageList">
-        <item>
-         <property name="text">
-          <string>C++</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>D</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Rust</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Go</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>ispc</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Haskell</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Swift</string>
-         </property>
-        </item>
-       </widget>
+       <widget class="QComboBox" name="cbLanguageList"/>
       </item>
       <item>
        <widget class="QComboBox" name="cbCompilerList"/>
