(*)add splash screen

--- a/core/CodeInspector.qrc
+++ b/core/CodeInspector.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>resource/configurations</file>
+        <file>CodeInspector.png</file>
     </qresource>
 </RCC>
