--- a/core/coreImage.qrc
+++ b/core/coreImage.qrc
@@ -352,5 +352,7 @@
         <file>resource/image/language/cppx.png</file>
         <file>resource/image/language/ispc.png</file>
         <file>resource/image/language/clean.png</file>
+        <file>resource/image/library.png</file>
+        <file>resource/image/loadexample.png</file>
     </qresource>
 </RCC>
