--- a/core/coreImage.qrc
+++ b/core/coreImage.qrc
@@ -358,5 +358,6 @@
         <file>resource/image/language/cppx_gold.png</file>
         <file>resource/image/language/nim.png</file>
         <file>resource/image/language/python.png</file>
+        <file>resource/image/language/java.png</file>
     </qresource>
 </RCC>
