--- a/core/example.qrc
+++ b/core/example.qrc
@@ -70,5 +70,6 @@
         <file>resource/example/swift/default.swift</file>
         <file>resource/example/zig/default.zig</file>
         <file>resource/example/zig/Sum_over_array.zig</file>
+        <file>resource/example/java/square.java</file>
     </qresource>
 </RCC>
