--- a/core/example.qrc
+++ b/core/example.qrc
@@ -72,5 +72,6 @@
         <file>resource/example/zig/Sum_over_array.zig</file>
         <file>resource/example/java/square.java</file>
         <file>resource/example/python/pass.py</file>
+        <file>resource/example/nim/square.nim</file>
     </qresource>
 </RCC>
