add builtin lua template

--- a/core/scintilla.qrc
+++ b/core/scintilla.qrc
@@ -28,5 +28,6 @@
         <file>resource/sci/themes/Neon.xml</file>
         <file>resource/sci/themes/VS2015-Dark.xml</file>
         <file>resource/sci/themes/Default.xml</file>
+        <file>resource/lua/builtin.lua</file>
     </qresource>
 </RCC>
