--- a/core/coreImage.qrc
+++ b/core/coreImage.qrc
@@ -37,5 +37,12 @@
         <file>resource/image/language/python.png</file>
         <file>resource/image/language/java.png</file>
         <file>resource/image/language/kotlin.png</file>
+        <file>resource/image/language/crystal.png</file>
+        <file>resource/image/language/ruby.png</file>
+        <file>resource/image/language/scala.png</file>
+        <file>resource/image/language/cmake.png</file>
+        <file>resource/image/language/circle.png</file>
+        <file>resource/image/language/cpp_for_opencl.png</file>
+        <file>resource/image/language/openclc.png</file>
     </qresource>
 </RCC>
